Header/Footer: Fix horizontal scrolling in mobile search menu.
It was broken by Gutenberg 11.9.0.

See WordPress/wporg-news-2021#73

--- a/mu-plugins/blocks/global-header-footer/postcss/header/search.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/search.pcss
@@ -49,7 +49,9 @@
 		}
 	}
 
-	& .wp-block-navigation__submenu-container {
+	& .wp-block-navigation__responsive-container-content .wp-block-navigation__submenu-container {
+		padding: 0;
+
 		@media (--tablet) {
 			width: 300px;
 			top: 47px;
